--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -496,44 +496,6 @@
                         Y: =49
                         ZIndex: =1
 
-                        Title5_1 As label:
-                            Color: =RGBA(50, 49, 48, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =Self.Size * 1.8
-                            OnSelect: =Select(Parent)
-                            PaddingBottom: =0
-                            PaddingLeft: =0
-                            PaddingRight: =0
-                            PaddingTop: =0
-                            Size: =12
-                            Text: |-
-                                ="Br. artikla:   " & ThisItem.Entry_No
-                            VerticalAlign: =VerticalAlign.Top
-                            Width: =Parent.TemplateWidth - 86
-                            X: =24
-                            Y: =18
-                            ZIndex: =1
-
-                        Body1_6 As label:
-                            Color: =RGBA(0, 0, 0, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =18
-                            OnSelect: =Select(Parent)
-                            PaddingBottom: =0
-                            PaddingLeft: =0
-                            PaddingRight: =0
-                            PaddingTop: =0
-                            Size: =12
-                            Text: |-
-                                ="Količina:    "
-                            VerticalAlign: =VerticalAlign.Top
-                            Width: =88
-                            X: =24
-                            Y: =55
-                            ZIndex: =3
-
                         Separator6_1 As rectangle:
                             BorderColor: =RGBA(89, 0, 0, 1)
                             Fill: =RGBA(255, 255, 255, 1)
@@ -552,132 +514,177 @@
                             Width: =4
                             ZIndex: =6
 
-                        Body1_7 As label:
-                            Color: =RGBA(0, 0, 0, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =Self.Size * 1.8
-                            OnSelect: =Select(Parent)
-                            PaddingBottom: =0
-                            PaddingLeft: =0
-                            PaddingRight: =0
-                            PaddingTop: =0
-                            Size: =12
-                            Text: |-
-                                ="Rok trajanja:    "
-                            VerticalAlign: =VerticalAlign.Top
-                            Width: =120
-                            X: =24
-                            Y: =97
-                            ZIndex: =8
+                        Group7 As group:
+                            Height: =5
+                            Width: =5
+                            X: =40
+                            Y: =40
+                            ZIndex: =18
 
-                        Body1_9 As label:
-                            Color: =RGBA(0, 0, 0, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =Self.Size * 1.8
-                            OnSelect: =Select(Parent)
-                            PaddingBottom: =0
-                            PaddingLeft: =0
-                            PaddingRight: =0
-                            PaddingTop: =0
-                            Size: =12
-                            Text: |-
-                                ="LOT:    " & ThisItem.LOT_No
-                            VerticalAlign: =VerticalAlign.Top
-                            Width: =60
-                            X: =28
-                            Y: =133
-                            ZIndex: =9
+                            Title5_1 As label:
+                                Color: =RGBA(50, 49, 48, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =Self.Size * 1.8
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =0
+                                PaddingRight: =0
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Br. artikla:   " & ThisItem.Entry_No
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =Parent.TemplateWidth - 86
+                                X: =24
+                                Y: =18
+                                ZIndex: =1
 
-                        "NabavniNalogResEntryQty As 'Text input'":
-                            Align: ='TextInputCanvas.Align'.Start
-                            Appearance: ="FilledDarker"
-                            BasePaletteColor: =
-                            DelayOutput: =true
-                            DisplayMode: =DisplayMode.Edit
-                            Fill: =
-                            FontColor: =
-                            FontSize: =15
-                            Height: =31
-                            OnChange: |-
-                                =UpdateIf(colPurchaseResEntry, NabavniNalogResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{Quantity: Value(NabavniNalogResEntryQty.Value)});
-                            Value: =ThisItem.Quantity
-                            Width: =113
-                            X: =112
-                            Y: =49
-                            ZIndex: =11
+                            Body1_6 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =18
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =0
+                                PaddingRight: =0
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Količina:    "
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =88
+                                X: =24
+                                Y: =55
+                                ZIndex: =3
 
-                        DatePickerExpDate As datepicker:
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            CalendarHeaderFill: =RGBA(164, 38, 44, 1)
-                            Color: =RGBA(0, 0, 0, 1)
-                            DefaultDate: =ThisItem.Exp_Date
-                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                            DisabledColor: =RGBA(166, 166, 166, 1)
-                            DisabledFill: =RGBA(244, 244, 244, 1)
-                            Format: ="dd.mm.yyyy"
-                            Height: =26
-                            HoverDateFill: =RGBA(222, 179, 184, 1)
-                            IconBackground: =RGBA(164, 38, 44, 1)
-                            OnChange: |-
-                                =UpdateIf(colPurchaseResEntry, NabavniNalogResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{Exp_Date: Text(DatePickerExpDate.SelectedDate, "yyyy-mm-dd")})
-                            OnSelect: =
-                            SelectedDateFill: =RGBA(164, 38, 44, 1)
-                            Width: =158
-                            X: =148
-                            Y: =92
-                            ZIndex: =14
+                            Body1_7 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =Self.Size * 1.8
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =0
+                                PaddingRight: =0
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="Rok trajanja:    "
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =120
+                                X: =24
+                                Y: =97
+                                ZIndex: =8
 
-                        "NabavniNalogLot As 'Text input'":
-                            Align: ='TextInputCanvas.Align'.Start
-                            Appearance: ="FilledDarker"
-                            BasePaletteColor: =
-                            DelayOutput: =true
-                            DisplayMode: =DisplayMode.Edit
-                            Fill: =
-                            FontColor: =
-                            FontSize: =15
-                            Height: =31
-                            OnChange: |-
-                                =UpdateIf(colPurchaseResEntry, NabavniNalogResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{LOT_No: Text(NabavniNalogLot.Value)})
-                            Value: =ThisItem.LOT_No
-                            Width: =113
-                            X: =80
-                            Y: =128
-                            ZIndex: =15
+                            Body1_9 As label:
+                                Color: =RGBA(0, 0, 0, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                                Height: =Self.Size * 1.8
+                                OnSelect: =Select(Parent)
+                                PaddingBottom: =0
+                                PaddingLeft: =0
+                                PaddingRight: =0
+                                PaddingTop: =0
+                                Size: =12
+                                Text: |-
+                                    ="LOT:    " & ThisItem.LOT_No
+                                VerticalAlign: =VerticalAlign.Top
+                                Width: =60
+                                X: =28
+                                Y: =133
+                                ZIndex: =9
 
-                        "Icon3 As icon.'3DPrinting'":
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Color: =RGBA(89, 0, 0, 1)
-                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                            DisabledColor: =RGBA(244, 244, 244, 1)
-                            Height: =25
-                            Icon: =Icon.ColorPicker
-                            OnSelect: |-
-                                =Set(tempValue, Text(ThisItem.Quantity));
-                                Set(propertyToChange, "Quantity");
-                                Set(changeValueModal, true);
-                            Width: =25
-                            X: =245
-                            Y: =52
-                            ZIndex: =16
+                            "NabavniNalogResEntryQty As 'Text input'":
+                                Align: ='TextInputCanvas.Align'.Start
+                                Appearance: ="FilledDarker"
+                                BasePaletteColor: =
+                                DelayOutput: =true
+                                DisplayMode: =DisplayMode.Edit
+                                Fill: =
+                                FontColor: =
+                                FontSize: =15
+                                Height: =31
+                                OnChange: |-
+                                    =UpdateIf(colPurchaseResEntry, NabavniNalogResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{Quantity: Value(NabavniNalogResEntryQty.Value)});
+                                Value: =ThisItem.Quantity
+                                Width: =113
+                                X: =112
+                                Y: =49
+                                ZIndex: =11
 
-                        "Icon3_1 As icon.'3DPrinting'":
-                            BorderColor: =RGBA(89, 0, 0, 1)
-                            Color: =RGBA(89, 0, 0, 1)
-                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                            DisabledColor: =RGBA(244, 244, 244, 1)
-                            Height: =25
-                            Icon: =Icon.ColorPicker
-                            OnSelect: |-
-                                =Set(tempValue, ThisItem.LOT_No);
-                                Set(propertyToChange, "LOT_No");
-                                Set(changeValueModal, true);
-                            Width: =25
-                            X: =213
-                            Y: =131
-                            ZIndex: =17
+                            DatePickerExpDate As datepicker:
+                                BorderColor: =RGBA(89, 0, 0, 1)
+                                CalendarHeaderFill: =RGBA(164, 38, 44, 1)
+                                Color: =RGBA(0, 0, 0, 1)
+                                DefaultDate: =ThisItem.Exp_Date
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                DisabledFill: =RGBA(244, 244, 244, 1)
+                                Format: ="dd.mm.yyyy"
+                                Height: =26
+                                HoverDateFill: =RGBA(222, 179, 184, 1)
+                                IconBackground: =RGBA(164, 38, 44, 1)
+                                OnChange: |-
+                                    =UpdateIf(colPurchaseResEntry, NabavniNalogResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{Exp_Date: Text(DatePickerExpDate.SelectedDate, "yyyy-mm-dd")})
+                                OnSelect: =
+                                SelectedDateFill: =RGBA(164, 38, 44, 1)
+                                Width: =158
+                                X: =148
+                                Y: =92
+                                ZIndex: =14
+
+                            "NabavniNalogLot As 'Text input'":
+                                Align: ='TextInputCanvas.Align'.Start
+                                Appearance: ="FilledDarker"
+                                BasePaletteColor: =
+                                DelayOutput: =true
+                                DisplayMode: =DisplayMode.Edit
+                                Fill: =
+                                FontColor: =
+                                FontSize: =15
+                                Height: =31
+                                OnChange: |-
+                                    =UpdateIf(colPurchaseResEntry, NabavniNalogResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{LOT_No: Text(NabavniNalogLot.Value)})
+                                Value: =ThisItem.LOT_No
+                                Width: =113
+                                X: =80
+                                Y: =128
+                                ZIndex: =15
+
+                            "Icon3 As icon.'3DPrinting'":
+                                BorderColor: =RGBA(89, 0, 0, 1)
+                                Color: =RGBA(89, 0, 0, 1)
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledColor: =RGBA(244, 244, 244, 1)
+                                Height: =25
+                                Icon: =Icon.ColorPicker
+                                OnSelect: |-
+                                    =Set(tempValue, Text(ThisItem.Quantity));
+                                    Set(propertyToChange, "Quantity");
+                                    Set(changeValueModal, true);
+                                Width: =25
+                                X: =245
+                                Y: =52
+                                ZIndex: =16
+
+                            "Icon3_1 As icon.'3DPrinting'":
+                                BorderColor: =RGBA(89, 0, 0, 1)
+                                Color: =RGBA(89, 0, 0, 1)
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledColor: =RGBA(244, 244, 244, 1)
+                                Height: =25
+                                Icon: =Icon.ColorPicker
+                                OnSelect: |-
+                                    =Set(tempValue, ThisItem.LOT_No);
+                                    Set(propertyToChange, "LOT_No");
+                                    Set(changeValueModal, true);
+                                Width: =25
+                                X: =213
+                                Y: =131
+                                ZIndex: =17
 
                     Container2_1 As groupContainer.horizontalAutoLayoutContainer:
                         DropShadow: =DropShadow.Light
