--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -160,6 +160,14 @@
                     Y: =1
                     ZIndex: =1
 
+                    TextCanvas1 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =32
+                        Width: =96
+                        X: =40
+                        Y: =40
+                        ZIndex: =7
+
                     Group4 As group:
                         Height: =5
                         Width: =5
