--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -937,3 +937,13 @@
             =Parent.Width
         ZIndex: =2
 
+        Container3 As groupContainer.manualLayoutContainer:
+            DropShadow: =DropShadow.Light
+            RadiusBottomLeft: =4
+            RadiusBottomRight: =4
+            RadiusTopLeft: =4
+            RadiusTopRight: =4
+            X: =40
+            Y: =40
+            ZIndex: =1
+
