--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -943,7 +943,7 @@
             RadiusBottomRight: =4
             RadiusTopLeft: =4
             RadiusTopRight: =4
-            X: =40
-            Y: =40
+            X: =Parent.Width * 25%
+            Y: =Parent.Height * 25%
             ZIndex: =1
 
